--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 	</header>
 	<main class='content'>
 		<header class='main-header'>
-			<h2>Latest News</h2>
-			<p>The latest links in the front-end community.<a href="#">Add a link now!</a></p>
+			<h2 class='para'>Latest News</h2>
+			<p class='para'>The latest links in the front-end community.<a class='js-add-text' href="#">Add a link now!</a></p>
+			<form class='form'>
+			<label class='form-label' for='form-link-input'>Add a story:</label>
+			<input class='form-text' type="text" id='form-link-input'></input>
+		</form>
 		</header>
 		<ol class='news-list'>
 			<li class='news-list-item'>
@@ -21,7 +25,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Like the story!!</a></li>
 				</ul>
 			</li> 
 			<li class='news-list-item'>
@@ -30,7 +34,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -39,7 +43,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -48,7 +52,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -57,7 +61,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">5 comments</a></li>
-				    <li><a href="#">Like the story!</a></li>
+				    <li><a class='js-like' href="#">Like the story!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -66,7 +70,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -75,7 +79,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -84,7 +88,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li>< class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -93,7 +97,7 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">2 comments</a></li>
-				    <li><a href="#">Liked!</a></li>
+				    <li><a class='js-like' href="#">Liked!</a></li>
 				</ul>
 			</li>
 			<li class='news-list-item'>
@@ -102,10 +106,12 @@
 					<li>Posted by</li>
 				    <li><a href="#">Dan Denny</a></li>
 				    <li><a href="#">12 comments</a></li>
-				    <li><a href="#">Like the story!!</a></li>
+				    <li><a class='js-like' href="#">Like the story!!</a></li>
 				</ul>
 			</li>
 		</ol>
 	</main>
+	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
